[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/main/Main.gd" type="Script" id=1]
[ext_resource path="res://arts/menu/MenuBackground.png" type="Texture" id=2]
[ext_resource path="res://arts/menu/HostWindow.png" type="Texture" id=3]
[ext_resource path="res://arts/menu/MenuButtonJoin.png" type="Texture" id=6]
[ext_resource path="res://fonts/Comic Book.otf" type="DynamicFontData" id=7]
[ext_resource path="res://arts/menu/PlayersAwaitingWindow.png" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFontData" id=37]
font_path = "res://fonts/Comic Book Bold.otf"

[sub_resource type="DynamicFont" id=38]
size = 24
extra_spacing_bottom = -7
font_data = SubResource( 37 )

[sub_resource type="DynamicFont" id=13]
size = 24
outline_color = Color( 0.0313726, 0.203922, 0.215686, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="DynamicFontData" id=32]
font_path = "res://fonts/Comic Book.otf"

[sub_resource type="DynamicFont" id=30]
size = 27
outline_size = 1
use_filter = true
extra_spacing_space = -11
font_data = SubResource( 32 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFontData" id=33]
font_path = "res://fonts/Comic Book Bold.otf"

[sub_resource type="DynamicFont" id=34]
size = 31
use_filter = true
font_data = SubResource( 33 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -338.0
margin_right = 225.0
margin_bottom = 324.0
rect_min_size = Vector2( 450, 662 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -299.0
margin_right = 208.0
margin_bottom = 299.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 8 )
expand = true

[node name="ServerTitle" type="Label" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -230.0
margin_right = 136.0
margin_bottom = -179.0
custom_colors/font_color = Color( 0.0313726, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 38 )
text = "Server Code
"
align = 1

[node name="ServerCode" type="Label" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -202.0
margin_right = 135.0
margin_bottom = -168.0
custom_colors/font_color = Color( 0.0313726, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 38 )
align = 1

[node name="List" type="ItemList" parent="Players"]
margin_left = 181.0
margin_top = 185.0
margin_right = 322.0
margin_bottom = 512.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_selected = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0.0313726, 0.203922, 0.215686, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/cursor = SubResource( 7 )
custom_styles/selected_focus = SubResource( 8 )
custom_styles/bg_focus = SubResource( 9 )
custom_styles/cursor_unfocused = SubResource( 10 )
custom_styles/selected = SubResource( 11 )
custom_styles/bg = SubResource( 12 )
auto_height = true
__meta__ = {
"_editor_description_": ""
}

[node name="Start" type="Button" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = 198.0
margin_right = 78.0
margin_bottom = 272.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 6 )
expand_icon = true

[node name="Label" type="Label" parent="Players/Start"]
margin_left = 25.0
margin_top = 18.0
margin_right = 111.0
margin_bottom = 53.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 30 )
text = "S tart"
align = 1

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -223.5
margin_top = -120.0
margin_right = 223.5
margin_bottom = 120.0
rect_min_size = Vector2( 447, 240 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 14 )

[node name="TextureRect" type="TextureRect" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.5
margin_top = -117.57
margin_right = 241.5
margin_bottom = 125.43
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NickNameHost" type="LineEdit" parent="Connect"]
visible = false
margin_left = 145.0
margin_top = 68.0
margin_right = 325.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 34 )
custom_styles/read_only = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
align = 1
placeholder_text = "NICKNAME"

[node name="NickNameJoin" type="LineEdit" parent="Connect"]
visible = false
margin_left = 145.5
margin_top = 53.0
margin_right = 325.5
margin_bottom = 94.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 34 )
custom_styles/read_only = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
align = 1
placeholder_text = "NICKNAME"

[node name="ServerCode" type="LineEdit" parent="Connect"]
visible = false
margin_left = 141.5
margin_top = 89.0
margin_right = 321.5
margin_bottom = 130.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 34 )
custom_styles/read_only = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
align = 1
placeholder_text = "SERVER"

[node name="SubmitHost" type="Button" parent="Connect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = 4.0
margin_right = 77.5
margin_bottom = 78.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 6 )
expand_icon = true

[node name="Label" type="Label" parent="Connect/SubmitHost"]
margin_left = 20.0
margin_top = 19.0
margin_right = 117.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 30 )
text = "Submit"
align = 1

[node name="SubmitJoin" type="Button" parent="Connect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = 14.0
margin_right = 74.0
margin_bottom = 88.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 6 )
expand_icon = true

[node name="Label" type="Label" parent="Connect/SubmitJoin"]
margin_left = 20.0
margin_top = 19.0
margin_right = 117.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 30 )
text = "Submit"
align = 1

[node name="Host" type="Button" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -77.0
margin_right = 87.0
margin_bottom = 3.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 6 )
expand_icon = true

[node name="Label" type="Label" parent="Connect/Host"]
margin_left = 38.0
margin_top = 21.0
margin_right = 111.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 30 )
text = "Host"
align = 1

[node name="Join" type="Button" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = 9.0
margin_right = 87.0
margin_bottom = 89.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 6 )
expand_icon = true

[node name="Label" type="Label" parent="Connect/Join"]
margin_left = 43.0
margin_top = 21.0
margin_right = 103.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 30 )
text = "Join"
align = 1

[node name="ErrorLabel" type="Label" parent="Connect"]
visible = false
margin_left = 15.0
margin_top = 125.0
margin_right = 259.0
margin_bottom = 139.0
size_flags_horizontal = 2
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_left = 850.0
margin_top = 201.0
margin_right = 1084.0
margin_bottom = 342.0
size_flags_horizontal = 2
size_flags_vertical = 2

[connection signal="pressed" from="Players/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Connect/SubmitHost" to="." method="_on_Submit_Host_pressed"]
[connection signal="pressed" from="Connect/SubmitJoin" to="." method="_on_Submit_Join_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_Join_pressed"]
